--- a/style.css
+++ b/style.css
@@ -3869,7 +3869,8 @@ background: #00A9DD;
 }
 
 .coursetag_a2plushighachievers #book-index #indice .units ul li.active a, 
-.coursetag_a2plushighachievers #book-index .col-main, body:not(.isTablet) #book-index #indice .units ul li:not(.disabled) a:hover {
+.coursetag_a2plushighachievers #book-index .col-main, 
+.coursetag_a2plushighachiever body:not(.isTablet) #book-index #indice .units ul li:not(.disabled) a:hover {
     background: #00A9DD;
 }
 
