--- a/style.css
+++ b/style.css
@@ -382,6 +382,37 @@ body.is_app .highAchievers-navbar.ocultar {
     height: 40px
 }
 
+/*logo*/
+.content_type_curso_highAchievers .libro-left ul li .title:before {
+    content: "";
+    background-size: contain;
+    top: 12px;
+    background-image: url(images/highAchievers_logo.png) !important;
+    position: fixed;
+    width: 100px;
+    height: 23px;
+    background-repeat: no-repeat;
+    left: 50%;
+    margin-left: -40px;
+    opacity: 1;
+}
+
+.navbar-content .logo-publisher {
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100px;
+    height: 44px;
+    background: url(images/highAchievers_logo.png) 0 0 no-repeat;
+    -webkit-background-size: contain;
+       -moz-background-size: contain;
+         -o-background-size: contain;
+            background-size: contain;
+    background-position: center center;
+
+}
+
 .highAchievers-navbar .copyright {
     color: #fff;
     line-height: 5rem
