--- a/style.css
+++ b/style.css
@@ -414,8 +414,7 @@ body.is_app .highAchievers-navbar.ocultar {
 }
 
 .highAchievers-navbar .copyright {
-    color: #fff;
-    line-height: 5rem
+display: none;
 }
 
 #actividad .content img {
