--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ p {
 
 #book-index #indice .units ul li.active a,
 #book-index .col-main,
-body:not(.isTablet) #book-index #indice .units ul li:not(.disabled) a:hover {
+/*body:not(.isTablet) #book-index #indice .units ul li:not(.disabled) a:hover*/ {
     background: #007c39;
 }
 
@@ -3805,6 +3805,12 @@ td,th {
 }
 
 .coursetag_a2highachievers #book-index .col-main{
+    background: #FFCC01;
+}
+
+.coursetag_a2highachievers #book-index #indice .units ul li.active a,
+.coursetag_a2highachievers #book-index .col-main,
+.coursetag_a2highachievers body:not(.isTablet) #book-index #indice .units ul li:not(.disabled) a:hover {
     background: #FFCC01;
 }
 
