--- a/style.css
+++ b/style.css
@@ -199,9 +199,12 @@ p {
 
 
 #book-index #indice .units ul li.active a,
-#book-index .col-main,
-/*body:not(.isTablet) #book-index #indice .units ul li:not(.disabled) a:hover*/ {
-    background: #007c39;
+#book-index .col-main {
+   background: #007c39;
+}
+
+body:not(.isTablet) #book-index #indice .units ul li:not(.disabled) a:hover {
+    background: inherit;
 }
 
 #indice .unit-content {
@@ -3809,9 +3812,12 @@ td,th {
 }
 
 .coursetag_a2highachievers #book-index #indice .units ul li.active a,
-.coursetag_a2highachievers #book-index .col-main,
-.coursetag_a2highachievers body:not(.isTablet) #book-index #indice .units ul li:not(.disabled) a:hover {
+.coursetag_a2highachievers #book-index .col-main {
     background: #FFCC01;
+}
+
+.coursetag_a2highachievers body:not(.isTablet) #book-index #indice .units ul li:not(.disabled) a:hover {
+    background: inherit;
 }
 
 /*enlaces*/
