--- a/style.css
+++ b/style.css
@@ -4118,7 +4118,7 @@ td,th {
 
 .coursetag_b2highachievers .btn-primary,
 .coursetag_b2highachievers .btn-primary.disabled {
-    backgrcoursetag_b2highachieversound: #E284B6 !important;
+    background: #E284B6 !important;
 }
 
 /*****coursetag_b2plushighachievers*******/
