--- a/style.css
+++ b/style.css
@@ -4191,7 +4191,7 @@ td,th {
 
 .coursetag_b2plushighachievers .btn-primary,
 .coursetag_b2plushighachievers .btn-primary.disabled {
-    backgrcoursetag_b2highachieversound: #4CC1D3 !important;
+    background: #4CC1D3 !important;
 }
 
 /*unittag*/
